@@ -2,7 +2,7 @@ import actor.Waitress;
 import model.menu.Menu;
 import model.order.Order;
 
-import java.util.List;
+import java.util.Arrays;
 
 public class Application {
     public static void main(String[] args) {
@@ -11,7 +11,7 @@ public class Application {
         Waitress waitress = new Waitress(1, "Jessica");
         waitress.presentMenu(menu);
 
-        Order orderOne = new Order(1, List.of(0,1,2));
+        Order orderOne = new Order(1, Arrays.asList(0,1,2));
         orderOne.getItems();
     }
 }
